--- a/app/src/main/res/layout/item_user_search.xml
+++ b/app/src/main/res/layout/item_user_search.xml
@@ -1,9 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/item_margin"
+    android:background="@color/background"
     android:orientation="horizontal">
+
+    <android.support.v7.widget.CardView
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="0dp">
+
+        <ImageView
+            android:id="@+id/avatar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            tools:src="@tools:sample/avatars" />
+
+    </android.support.v7.widget.CardView>
+
+    <!--<ImageView
+        android:id="@+id/name"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        tools:src="@tools:sample/avatars" />-->
 
     <TextView
         android:id="@+id/username"
