feature: Show avatar, name and username of the user in the list view as per design specification. Fonts needed to be moved to appropriate /assets directory which were previously wrongly placed.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="background">#FFFFFF</color>
     <color name="divider">#DDDDDD</color>
+    <color name="name">#1D1C1D</color>
+    <color name="username">#616061</color>
 </resources>
