--- a/app/src/main/res/layout/item_user_search.xml
+++ b/app/src/main/res/layout/item_user_search.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/item_margin"
+    android:layout_height="44dp"
+    android:layout_marginEnd="16dp"
     android:background="@color/background"
     android:orientation="horizontal">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardview_image_container"
         android:layout_width="28dp"
         android:layout_height="28dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         app:cardCornerRadius="4dp"
         app:cardElevation="0dp">
 
@@ -23,14 +28,41 @@
 
     </android.support.v7.widget.CardView>
 
-    <!--<ImageView
-        android:id="@+id/name"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        tools:src="@tools:sample/avatars" />-->
+    <LinearLayout
+        android:id="@+id/container_col2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="12dp"
+        android:layout_toEndOf="@id/cardview_image_container">
 
-    <TextView
-        android:id="@+id/username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        <com.slack.exercise.ui.widgets.SlackTextViewBold
+            android:id="@+id/display_name"
+            style="@style/NameStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:inputType="textCapWords|textNoSuggestions"
+            android:lines="1"
+            android:maxLength="28"
+            android:textSize="16sp"
+            tools:text="small name scaling name and long name" />
+
+        <com.slack.exercise.ui.widgets.SlackTextViewRegular
+            android:id="@+id/username"
+            style="@style/UsernameStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical|start"
+            android:layout_marginStart="8dp"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:inputType="text|textNoSuggestions"
+            android:lines="1"
+            android:textColor="@color/username"
+            tools:text="this is a really long " />
+
+    </LinearLayout>
+</RelativeLayout>
